--- a/solution.ipynb
+++ b/solution.ipynb
@@ -2,51 +2,48 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1000\n",
-      "2000\n",
-      "3000\n",
-      "4000\n",
-      "5000\n",
-      "6000\n",
-      "7000\n",
-      "8000\n",
-      "9000\n",
-      "10000\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "fd = open(\"test input\")\n",
     "lines = fd.readlines()\n",
+    "sums = []\n",
+    "sum = 0\n",
     "for line in lines:\n",
-    "    if len(line.rstrip()) == 0:\n",
+    "    line = line.rstrip()\n",
+    "    if len(line) == 0:\n",
+    "        sums.append(sum)\n",
     "        continue\n",
-    "    print(int(line.rstrip()))\n",
+    "    sum += int(line)\n",
     "    "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
-  "orig_nbformat": 4
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.4"
+  },
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "3ad933181bd8a04b432d3370b9dc3b0662ad032c4dfaa4e4f1596c548f763858"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
